# iperfwrapper

./: .gitmodules  settings.gradle
iperfwrapperlib/: .gitignore  CMakeLists.txt  build.gradle
iperfwrapperlib/src/androidTest/java/hkhc/iperfwrapper/: ExampleInstrumentedTest.java
iperfwrapperlib/src/main/: AndroidManifest.xml
iperfwrapperlib/src/main/cpp/: hello.c  test_run.c
iperfwrapperlib/src/main/java/hkhc/iperfwrapper/: AndroidDefaults.java  DefaultConfig.java  HelloJni.java  Iperf3.java  IperfException.java
iperfwrapperlib/src/main/res/values/: strings.xml
iperfwrapperlib/src/test/java/hkhc/iperfwrapper/: ExampleUnitTest.java
sample/: build.gradle
sample/src/androidTest/java/hkhc/iperfwrapper/: ExampleInstrumentedTest.java
sample/src/androidTest/java/hkhc/iperfwrapper/sample/: ExampleInstrumentedTest.java
sample/src/main/: AndroidManifest.xml
sample/src/main/java/hkhc/iperfwrapper/: MainActivity.java
sample/src/main/java/hkhc/iperfwrapper/sample/: MainActivity.java
sample/src/main/java/hkhc/utils/: FileUtils.java
sample/src/main/res/layout/: activity_main.xml
sample/src/main/res/values/: strings.xml
